Primera version de nuevo enfoque. Muy lento.

--- a/UNode Profiling.ipynb
+++ b/UNode Profiling.ipynb
@@ -22,14 +22,14 @@
      "outputs": [
       {
        "output_type": "stream",
-       "stream": "stdout",
+       "stream": "stderr",
        "text": [
-        "The line_profiler extension is already loaded. To reload it, use:\n",
-        "  %reload_ext line_profiler\n"
+        "/Users/npcastro/anaconda/lib/python2.7/site-packages/pytz/__init__.py:29: UserWarning: Module argparse was already imported from /Users/npcastro/anaconda/python.app/Contents/lib/python2.7/argparse.pyc, but /Users/npcastro/anaconda/lib/python2.7/site-packages is being added to sys.path\n",
+        "  from pkg_resources import resource_stream\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -42,16 +42,17 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "nodo = Node(data, level = 10)\n",
       "unodo = UNode(data, level = 10) # Con 10 evito que el nodo crezca\n",
       "\n",
-      "f = nodo.filterfeatures()[0]\t\n",
-      "p = nodo.get_pivotes(data[f], 'exact')\n",
+      "f = unodo.filterfeatures()[0]\t\n",
+      "p = unodo.get_pivotes(data[f], 'exact')\n",
       "\n",
       "menores = nodo.get_menores(f, p[100])\n",
       "mayores = nodo.get_mayores(f, p[100])\n",
@@ -61,7 +62,26 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "lprun -f unodo.split"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
