--- a/UNode Profiling.ipynb
+++ b/UNode Profiling.ipynb
@@ -68,7 +68,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lprun -f unodo.split"
+      "%lprun -f unodo.split"
      ],
      "language": "python",
      "metadata": {},
